--- a/ProjectSE/src/projectse/FXMLDocument.fxml
+++ b/ProjectSE/src/projectse/FXMLDocument.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectse.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectse.FXMLDocumentController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="61.0" layoutY="42.0" spacing="15.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0">
          <children>
@@ -19,13 +18,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <TextField fx:id="textField" layoutX="61.0" layoutY="647.0" prefHeight="47.0" prefWidth="478.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding></TextField>
+            <TextField fx:id="textField" layoutX="61.0" layoutY="647.0" prefHeight="47.0" prefWidth="478.0" />
             <Button fx:id="executeButton" layoutX="265.0" layoutY="713.0" mnemonicParsing="false" onAction="#execute" text="Execute" />
          </children>
       </VBox>
