--- a/ProjectSE/src/projectse/FXMLDocument.fxml
+++ b/ProjectSE/src/projectse/FXMLDocument.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectse.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: #1595eb;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectse.FXMLDocumentController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="61.0" layoutY="42.0" spacing="15.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0">
          <children>
-            <TableView fx:id="stackView" layoutX="61.0" layoutY="42.0" prefHeight="583.0" prefWidth="478.0">
+            <TableView fx:id="stackView" layoutX="61.0" layoutY="42.0" prefHeight="583.0" prefWidth="478.0" style="-fx-background-color: white;">
               <columns>
                 <TableColumn fx:id="tableColumn" editable="false" minWidth="-1.0" prefWidth="75.0" sortable="false" text="Stack" />
               </columns>
@@ -23,7 +23,7 @@
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
-            <Button fx:id="executeButton" layoutX="265.0" layoutY="713.0" mnemonicParsing="false" onAction="#execute" text="Execute" />
+            <Button fx:id="executeButton" layoutX="265.0" layoutY="713.0" mnemonicParsing="false" onAction="#execute" style="-fx-background-color: blue; -fx-text-fill: white; -fx-font-weight: bold;" text="Execute" />
          </children>
       </VBox>
    </children>
