--- a/ProjectSE/src/projectse/FXMLDocument.fxml
+++ b/ProjectSE/src/projectse/FXMLDocument.fxml
@@ -19,7 +19,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <TextField fx:id="textField" layoutX="61.0" layoutY="647.0" prefHeight="47.0" prefWidth="478.0">
+            <TextField fx:id="textField" layoutX="61.0" layoutY="647.0" onAction="#execute" prefHeight="47.0" prefWidth="478.0">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding></TextField>
